fix: gif box layout breaks on devices < 720p wide

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .randomGif {
-  /*width: 500px;*/
-  margin: 1rem;
-  border-radius: 15px;
+  display: block;
+  width: 100%;
   max-width: 100%;
+  border-radius: 15px;
 }
 
 .randomGifBox {
   margin: 1rem;
+  padding: 1rem;
   background-color: #3e3e3e;
   border-radius: 15px;
 }
